--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView.cshtml
@@ -5,6 +5,16 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Leaflet Routing Example</title>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+	<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+
+
+
+
 	<style>
 		body {
 			margin: 0;
@@ -24,12 +34,7 @@
 	<title>Responsive Design Example</title>
 </head>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-      crossorigin="" />
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-        crossorigin=""></script>
+
 
 <div class="mb-3" >
 	<form method="get" action="/Routes/RoutesView">
@@ -65,6 +70,7 @@
 
 <script>
 	var map = L.map('map').setView([44.977300, 19.611058], 15);
+
 	L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 	}).addTo(map);
@@ -95,30 +101,44 @@
 		}
 	}
 
-	@if (Model.Shapes != null )
+	@if (Model.Shapes != null)
 	{
 		@for (int i = 0; i < Model.Shapes?.Count(); i++)
 		{
 			@:coordinates.push({ lat: "@Model.Shapes[i].Lat.ToString().Replace(',','.')", lon: "@Model.Shapes[i].Lon.ToString().Replace(',','.')" });
-	
+
 		}
 	}
 
-		//console.log(circles);
 
-		for (var i = 0; i < markers.length; i++) {
-		var marker = L.marker([markers[i].lat, markers[i].lon]).addTo(map);
+	for (var i = 0; i < markers.length; i++) {
+	var marker = L.marker([markers[i].lat, markers[i].lon]).addTo(map);
 	}
 
-	var busRoute = L.polyline(
-		[coordinates],
-		{
-			color: 'red',
-			weight: 3,
-			opacity: 0.5,
-			smoothFactor: 1,
-		}).addTo(map);
+	var control = L.Routing.control({
+		waypoints: [
+			L.latLng(44.977300, 19.611058),  // Start point
+			L.latLng(45.000000, 19.800000)   // End point
+		],
+		routeWhileDragging: true,
+		geocoder: L.Control.Geocoder.nominatim(),
+	}).addTo(map);
 
+	// Disable dragging for each waypoint marker
+	control.on('waypointschanged', function () {
+		control.getWaypoints().forEach(function (waypoint) {
+			waypoint.marker.dragging.disable();
+		});
+	});
+
+	// var busRoute = L.polyline(
+	// 	[coordinates],
+	// 	{
+	// 		color: 'red',
+	// 		weight: 3,
+	// 		opacity: 0.5,
+	// 		smoothFactor: 1,
+	// 	}).addTo(map);
 
 	for (var i = 0; i < circles.length; i++) {
 		var randomOpacity = Math.random();
@@ -132,8 +152,6 @@
 	}
 	
 
-
-	map.fitBounds(busRoute.getBounds());
 
 </script>
 
