--- a/WebApplication-BusTimeline/Pages/Routes/AddRoute.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/AddRoute.cshtml
@@ -3,6 +3,24 @@
 
 @{
 }
+<head>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: Arial, sans-serif;
+		}
+
+		.container {
+			width: 100%;
+			max-width: 1200px;
+			margin: 0 auto;
+			padding: 5px;
+			box-sizing: border-box;
+		}
+
+	</style>
+</head>
 
 <div div style="float: left; width: 50%">
 	<h4>Dodaj rutu</h4>
