--- a/WebApplication-BusTimeline/Pages/Routes/AddShape.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/AddShape.cshtml
@@ -2,10 +2,27 @@
 @model WebApplication_BusTimeline.Pages.Routes.AddShapeModel
 @{
 }
+<head>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: Arial, sans-serif;
+		}
+
+		.container {
+			width: 100%;
+			max-width: 1200px;
+			margin: 0 auto;
+			padding: 5px;
+			box-sizing: border-box;
+		}
+
+	</style>
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-
+</head>
 
 
 <div style="float: left; width: 70%">
