--- a/WebApplication-BusTimeline/Pages/Stops/AddStops.cshtml
+++ b/WebApplication-BusTimeline/Pages/Stops/AddStops.cshtml
@@ -2,9 +2,28 @@
 @model WebApplication_BusTimeline.Pages.Stops.AddStopsModel
 @{
 }
+<head>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: Arial, sans-serif;
+		}
+
+		.container {
+			width: 100%;
+			max-width: 1200px;
+			margin: 0 auto;
+			padding: 5px;
+			box-sizing: border-box;
+		}
+
+	</style>
+</head>
+
 
 
 <form method="post" onsubmit="OnPostNewStop()">
