--- a/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RouteDetails.cshtml
@@ -4,9 +4,31 @@
 @{
 }
 <head>
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
+	<link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+	<script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
 
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			font-family: Arial, sans-serif;
+		}
+
+		.container {
+			width: 100%;
+			max-width: 1200px;
+			margin: 0 auto;
+			padding: 5px;
+			box-sizing: border-box;
+		}
+
+	</style>
 </head>
 
 <div style="float: left; width: 40%">
@@ -143,7 +165,11 @@
 
 		var coordinates = [];
 		var markers = [];
+		var colorr; 
+		var orderedStops = [];
 
+
+		
 
 			@if (Model.Shapes != null)
 			{
@@ -158,22 +184,32 @@
 				@for(int i = 0; i<Model.RouteWithStops.Stops?.Count(); i++)
 				{
 					@:markers.push({ lat: "@Model.RouteWithStops.Stops[i].Stop.Lat.ToString().Replace(',','.')", lon: "@Model.RouteWithStops.Stops[i].Stop.Lon.ToString().Replace(',','.')" })
+					@:colorr = '@Model.RouteWithStops.Color';
+
+				
 				}
 			}
+
+				console.log(orderedStops);
 
 
 			for (var i = 0; i < markers.length; i++) {
 				var marker = L.marker([markers[i].lat, markers[i].lon]).addTo(map);
 			}
 
-				L.polyline(
-					[coordinates],
-					{
-						color: 'red',
-						weight: 3,
-						opacity: 0.5,
-						smoothFactor: 1,
-					}).addTo(map);
+
+			var waypoints = markers.map(function (marker) {
+				return L.latLng(marker.lat, marker.lon);
+			});
+
+			L.Routing.control({
+				waypoints: waypoints,
+				routeWhileDragging: true,
+				lineOptions: {
+					styles: [{ color: colorr, opacity: 1, weight: 4 }]
+				},
+				show: false,
+			}).addTo(map);
 
 
 
