--- a/WebApplication-BusTimeline/Pages/Routes/RoutesView2.cshtml
+++ b/WebApplication-BusTimeline/Pages/Routes/RoutesView2.cshtml
@@ -2,6 +2,24 @@
 @model WebApplication_BusTimeline.Pages.Routes.RoutesView2Model
 @{
 }
+<head>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 5px;
+            box-sizing: border-box;
+        }
+
+    </style>
+</head>
 
 <h4 class="mb-3">Sve rute u gradu</h4>
 @if (Model.Routes != null)
@@ -10,7 +28,6 @@
         <thead class="table-primary">
         <th>Id</th>
         <th>Naziv</th>
-        <th></th>
         <th></th>
         <th></th>
         </thead>
@@ -28,20 +45,20 @@
                             </button>
                         </a>
                      </td>
-                    <td style="width:20px">
+                    <td style="width:30px">
                         <form method="post" asp-page-handler="DeleteRoute" asp-route-routeId="@r.Id" >
                             <button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
                                 <svg width="40px" height="40px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="#000000" d="M352 192V95.936a32 32 0 0 1 32-32h256a32 32 0 0 1 32 32V192h256a32 32 0 1 1 0 64H96a32 32 0 0 1 0-64h256zm64 0h192v-64H416v64zM192 960a32 32 0 0 1-32-32V256h704v672a32 32 0 0 1-32 32H192zm224-192a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32zm192 0a32 32 0 0 0 32-32V416a32 32 0 0 0-64 0v320a32 32 0 0 0 32 32z"></path></g></svg>
                             </button>
                         </form>
                     </td>
-                    <td style="width:20px">                    
+            @*         <td style="width:20px">                    
                         <a href=@($"/Routes/AddShape?Id={r.Id}")>
                             <button class="btn btn-primary" style="background-color:white; width:40px; height:40px; display: flex; align-items: center; justify-content: center;">
                                 <svg width="84px" height="84px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.4998 5.50067L18.3282 8.3291M13 21H21M3 21.0004L3.04745 20.6683C3.21536 19.4929 3.29932 18.9052 3.49029 18.3565C3.65975 17.8697 3.89124 17.4067 4.17906 16.979C4.50341 16.497 4.92319 16.0772 5.76274 15.2377L17.4107 3.58969C18.1918 2.80865 19.4581 2.80864 20.2392 3.58969C21.0202 4.37074 21.0202 5.63707 20.2392 6.41812L8.37744 18.2798C7.61579 19.0415 7.23497 19.4223 6.8012 19.7252C6.41618 19.994 6.00093 20.2167 5.56398 20.3887C5.07171 20.5824 4.54375 20.6889 3.48793 20.902L3 21.0004Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
                             </button>
                         </a>
-                    </td>
+                    </td> *@
 
                 </tr>
             }
